--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">AndroidKotlinTop10</string>
+    <string name="free_apps">Free Apps</string>
+    <string name="paid_apps">Paid Apps</string>
+    <string name="songs">Songs</string>
+    <string name="top_10">Top 10</string>
+    <string name="top_25">Top 25</string>
 </resources>
